--- a/assets/less-transactions.css
+++ b/assets/less-transactions.css
@@ -7,6 +7,6 @@
   transition: stroke 300ms ease-in-out;
 }
 
-#less-transactions-svg:hover {
+.less-transactions-less-transactions:hover #less-transactions-svg {
   stroke: rgba(106, 128, 205, 100);
 }
