--- a/src/renderer/task-area.css
+++ b/src/renderer/task-area.css
@@ -66,7 +66,13 @@
   padding-bottom: 11px;
   justify-content: center;
   background-color: rgba(115, 116, 150, 1);
+  transition: 300ms ease-in-out;
 }
+
+.task-area-button:hover {
+  background-color: rgb(106, 128, 205);
+}
+
 .task-area-run-task {
   color: rgba(42, 43, 66, 1);
   width: 149px;
