--- a/assets/home.css
+++ b/assets/home.css
@@ -2,3 +2,20 @@
   width: 40px;
   height: 40px;
 }
+
+#home-bg-svg {
+  transition: 300ms ease-in-out;
+}
+
+.home-home:hover #home-bg-svg {
+  border-radius: 20%;
+  box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.199);
+}
+
+#home-path-svg {
+  transition: stroke 300ms ease-in-out;
+}
+
+.home-home:hover #home-path-svg {
+  stroke: rgba(106, 128, 205, 100);
+}
