--- a/assets/send-receive.css
+++ b/assets/send-receive.css
@@ -2,3 +2,20 @@
   width: 40px;
   height: 40px;
 }
+
+#send-receive-bg-svg {
+  transition: 300ms ease-in-out;
+}
+
+.send-receive-send-receive:hover #send-receive-bg-svg {
+  border-radius: 20%;
+  box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.199);
+}
+
+#send-receive-path-svg {
+  transition: stroke 300ms ease-in-out;
+}
+
+.send-receive-send-receive:hover #send-receive-path-svg {
+  stroke: rgba(106, 128, 205, 100);
+}
