--- a/assets/swap.css
+++ b/assets/swap.css
@@ -2,3 +2,20 @@
   width: 40px;
   height: 40px;
 }
+
+#swap-bg-svg {
+  transition: 300ms ease-in-out;
+}
+
+.swap-swap:hover #swap-bg-svg {
+  border-radius: 20%;
+  box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.199);
+}
+
+#swap-path-svg {
+  transition: stroke 300ms ease-in-out;
+}
+
+.swap-swap:hover #swap-path-svg {
+  stroke: rgba(106, 128, 205, 100);
+}
