--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Gill Sans MT:wght@400;700"
     />
-    <title>Yagna Control UI</title>
+    <title>Qaiseo</title>
   </head>
   <body>
     <div id="root"></div>
